Line pos fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ body, html {
   background: var(--color-black);
   position: absolute;
   top: 15px;
-  left: calc(50% + 10px);
+  left: 10px;
   /* opacity: 0; */
 }
 
